--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@
 /*apply body font styloing*/
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: whitesmoke;
+
 }
 header {
     background-image: url("../images/—Pngtree—abstract\ blue\ and\ white\ background_322099.png");
@@ -42,4 +42,22 @@ header nav ul li a {
     font-size: 1.55vw;
 
 }
+.me {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+}
+.about-me {
 
+}
+.sections {
+    border-right: 5px solid var(--wording-color);
+    display: flex;
+
+}
+.sections>* {
+    flex: 1 50%;
+}
